OpenJMLTest/testfiles/escRecursiveInvariant/expected
testfiles\escRecursiveInvariant\RecursiveInvariant.java:4: error: Recursive attempt to assert or assume invariants - use pure helper methods: RecursiveInvariant
    //@ public invariant m();
                          ^
Proving methods in RecursiveInvariant
Starting proof of RecursiveInvariant.RecursiveInvariant() with prover !!!!
testfiles\escRecursiveInvariant\RecursiveInvariant.java:2: warning: The prover cannot establish an assertion (InvariantExit) in method RecursiveInvariant
public class RecursiveInvariant {
       ^
testfiles\escRecursiveInvariant\RecursiveInvariant.java:4: warning: Associated declaration
    //@ public invariant m();
               ^
Completed proof of RecursiveInvariant.RecursiveInvariant() with prover !!!! - with warnings
Starting proof of RecursiveInvariant.m() with prover !!!!
Feasibility check - end of preconditions : OK
Feasibility check - at program exit : OK
Completed proof of RecursiveInvariant.m() with prover !!!! - no warnings
Starting proof of RecursiveInvariant.t() with prover !!!!
Feasibility check - end of preconditions : OK
Feasibility check - at program exit : OK
Completed proof of RecursiveInvariant.t() with prover !!!! - no warnings
Completed proving methods in RecursiveInvariant
1 error
2 warnings
